objects/G2Crowd__G2_Review_Answer__c.object
<CustomObject>
    <fields>
        <fullName>G2Crowd__Answer_Type__c</fullName>
        <label>Answer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comment</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Answer_ID__c</fullName>
        <externalId>true</externalId>
        <label>G2 Answer ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Review__c</fullName>
        <label>G2 Review</label>
        <referenceTo>G2Crowd__G2_Review__c</referenceTo>
        <relationshipLabel>G2 Review Answers</relationshipLabel>
        <relationshipName>G2_Review_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Question_Type__c</fullName>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>categories</fullName>
                </value>
                <value>
                    <fullName>comment</fullName>
                </value>
                <value>
                    <fullName>dropdown</fullName>
                </value>
                <value>
                    <fullName>employment_position</fullName>
                </value>
                <value>
                    <fullName>endorsements</fullName>
                </value>
                <value>
                    <fullName>feature</fullName>
                </value>
                <value>
                    <fullName>product_search</fullName>
                </value>
                <value>
                    <fullName>simple_7</fullName>
                </value>
                <value>
                    <fullName>slider_nps</fullName>
                </value>
                <value>
                    <fullName>text_field</fullName>
                </value>
                <value>
                    <fullName>upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__Question__c</fullName>
        <label>Question</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>G2 Review Answer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Review Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>